# bsdiff

./: Makefile.am  bspatch_file.c  bspatch_file.h
