bin_PROGRAMS = bsdiff bspatch bspatch_file

bsdiff_SOURCES = bsdiff.c

bspatch_SOURCES = bspatch.c

bspatch_file_SOURCES = bspatch_file.c

bsdiff_CFLAGS = -DBSDIFF_EXECUTABLE
bspatch_CFLAGS = -DBSPATCH_EXECUTABLE
bspatch_file_CFLAGS = -DBSPATCH_FILE_EXECUTABLE

EXTRA_DIST = bsdiff.h bspatch.h bspatch_file.h

